{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "LeftVRcontroller",
            "id": "c6dd8f31-53c2-4712-b779-de9398b12993",
            "actions": [
                {
                    "name": "Squeeze",
                    "type": "Button",
                    "id": "5b398f12-408d-485a-b56f-505d88a5e1b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Grip",
                    "type": "Button",
                    "id": "ebc6a445-9c19-46a1-88ff-85e5fcb389a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TrackPadClick",
                    "type": "Button",
                    "id": "49e4fdf1-6a7d-44cf-a758-fdb511eb37ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TrackPadTouched",
                    "type": "Button",
                    "id": "55fc9f32-dc2d-4fbf-9df1-d59cd31d4844",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TriggerPressed",
                    "type": "Button",
                    "id": "8d02d9d0-2e06-4016-b0e8-ba36e40c29fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "IsTracked",
                    "type": "Button",
                    "id": "42be60fb-c8b9-4f19-8b1f-5499c3db3ab8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "39da8be9-3dbc-492c-8af1-02529cad0f9b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PointerIsTracked",
                    "type": "Button",
                    "id": "94322e3c-73c8-4537-9a0c-55a85c864e77",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DevicePoseIsTracked",
                    "type": "Button",
                    "id": "b04154dc-255c-4003-9eec-fa4b32358df6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c0b0beca-d830-42a9-9d1e-e3a490d8b37e",
                    "path": "/input/trigger/squeeze",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Squeeze",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e92924ed-72dc-43c8-805b-78e9d6c78962",
                    "path": "<ViveController>/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf5fe9af-74c6-4a50-8562-d31bea2c03af",
                    "path": "<ViveController>{LeftHand}/trackpadClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TrackPadClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "459923b9-e462-4980-a2c3-374e002c3fcb",
                    "path": "<ViveController>{LeftHand}/trackpadTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TrackPadTouched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c8a073a-e564-4cfb-a1f7-063b254dfef0",
                    "path": "<ViveController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0edb4992-3ec5-40cf-bf76-13075c304ee7",
                    "path": "<ViveController>{LeftHand}/isTracked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IsTracked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7c60bab-d3cb-49f6-bdac-27b629ce0de0",
                    "path": "<ViveController>{LeftHand}/menu",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "259d19c7-c5ad-4079-b7d1-dfe7a9bca663",
                    "path": "<ViveController>{LeftHand}/pointer/isTracked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerIsTracked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d86ebd0-3905-4a3d-b7fe-dd9328d133f7",
                    "path": "<ViveController>{LeftHand}/devicePose/isTracked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DevicePoseIsTracked",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RightVRcontroller",
            "id": "5ffb4834-00c6-48f6-bb3c-923b763e46d9",
            "actions": [
                {
                    "name": "GripPressed",
                    "type": "Button",
                    "id": "d808fcde-eee5-435e-8d1d-d116ff5ff978",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DevicePoseIsTracked",
                    "type": "Button",
                    "id": "41617f19-1826-414d-95a7-49f6a478f96a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "IsTracked",
                    "type": "Button",
                    "id": "220b8d1d-1773-4772-94ca-69f361c9f41c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "bb4dc936-235f-42be-a4e9-a5a0c4b17392",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PointerIsTracked",
                    "type": "Button",
                    "id": "53e2f1e7-495d-4062-b391-de205762c98c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "b9ee7161-2a1d-4871-ba3a-cc10e2b9712c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TrackPadClicked",
                    "type": "Button",
                    "id": "8362b6f6-3d11-475b-961e-6492da1b7e66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TrackPadTouched",
                    "type": "Button",
                    "id": "d77fe11e-7415-4fd3-a537-7bb5a9cd9404",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TriggerPressed",
                    "type": "Button",
                    "id": "8f934a6f-3e08-4108-bb34-1c34bc4babaa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f9fe6805-0611-43d9-a2cc-1ada725460c9",
                    "path": "<ViveController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc08aba2-cbb4-4b6e-94f9-9484961d8123",
                    "path": "<ViveController>{RightHand}/devicePose/isTracked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DevicePoseIsTracked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ea0f298-1b20-475a-a784-bfaa8268c944",
                    "path": "<ViveController>{RightHand}/isTracked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IsTracked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd80bfc7-d736-4406-8573-d541a5cc378b",
                    "path": "<ViveController>{RightHand}/menu",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c54e38b3-071e-4a9d-b2a3-d13bb93f1ca0",
                    "path": "<ViveController>{RightHand}/pointer/isTracked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerIsTracked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92931015-888b-418a-8411-43586ba333fe",
                    "path": "<ViveController>{RightHand}/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20417e3e-1e85-46ea-97dc-a7ebd51635d3",
                    "path": "<ViveController>{RightHand}/trackpadClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TrackPadClicked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30c1e86b-18ad-40bd-9e09-6b062ed2812d",
                    "path": "<ViveController>{RightHand}/trackpadTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TrackPadTouched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "164ba420-9d16-4a05-834f-a5e886950f7b",
                    "path": "<ViveController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}