using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class TestViveControllerScript : MonoBehaviour
{

    public void Test() {
        Debug.Log("here");
    }

    public void TriggerPressed() {
        Debug.Log("TriggerPressed");
    }

    public void GripPressed() {
        Debug.Log("GripPressed");
    }

    public void IsTracked() {
        Debug.Log("IsTracked");
    }

    public void Select() {
        Debug.Log("Select");
    }

    public void Menu() {
        Debug.Log("Menu");
    }

}
